Change Github link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <footer class="attribution text-base text-fem-600 mx-2">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="hover:underline text-fem-100">Frontend Mentor</a>. 
-        Coded by <a href="#" class="hover:underline text-fem-100">Ben</a>.
+        Coded by <a href="https://github.com/remtaine" class="hover:underline text-fem-100">Ben</a>.
     </footer>
 </body>
 </html>
