--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body class="font-outfit bg-fem-300 h-screen">
     <main class="flex justify-center items-center h-[calc(100vh-2rem)]">
-        <section class="w-72 bg-fem-400 h-{1000px} p-4 rounded-xl shadow-2xl flex flex-col gap-4 mx-4">
+        <section class="w-72 bg-fem-400 h-{1000px} p-4 rounded-xl shadow-2xl flex flex-col gap-4">
             <!-- <img src="/images/image-equilibrium.jpg" alt="" class="rounded-md"> -->
             <!-- <img src="/images/icon-view.svg" alt="" class="w-8 h-auto"> -->
             <div class="wrapper w-64 h-64 rounded-lg">
