Use FontAwesome icon

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="wrapper w-64 h-64 rounded-lg">
                 <img src="/images/image-equilibrium.jpg" alt="" class="rounded-lg after:cont">
                 <a href="#" class="overlay bg-fem-200/50 absolute w-64 h-64 flex justify-center items-center rounded-lg top-[172px] opacity-0 hover:opacity-100 z-50 duration-500">
-                    <img src="/images/icon-view.svg" alt="">
+                    <i class="fa-solid fa-eye text-3xl"></i>
                 </a>
             </div>
             <a href="#">
