--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <section class="w-72 bg-fem-400 h-{1000px} p-4 rounded-xl shadow-2xl flex flex-col gap-4">
             <!-- <img src="/images/image-equilibrium.jpg" alt="" class="rounded-md"> -->
             <!-- <img src="/images/icon-view.svg" alt="" class="w-8 h-auto"> -->
-            <div class="wrapper w-64 h-64 rounded-lg">
+            <div class="wrapper w-64 h-64 rounded-lg relative">
                 <img src="/images/image-equilibrium.jpg" alt="" class="rounded-lg after:cont">
-                <a href="#" class="overlay bg-fem-200/50 absolute w-64 h-64 flex justify-center items-center rounded-lg top-[186px] opacity-0 hover:opacity-100 z-50 duration-500">
+                <a href="#" class="overlay bg-fem-200/50 absolute w-64 h-64 flex justify-center items-center rounded-lg bottom-0 opacity-0 hover:opacity-100 z-50 duration-500">
                     <i class="fa-solid fa-eye text-3xl"></i>
                 </a>
             </div>
